fixed some spacing inconsistency problems fixed CSS not being applied to buttons inactive buttons are black, active button has the ublue gradient fixed inconsistent wording on the fedora tab

--- a/content/themes/betheme-child/style262.css
+++ b/content/themes/betheme-child/style262.css
@@ -1861,11 +1861,25 @@ d-topics-list > iframe {
     margin-top: 100px;
   }
   .tab button.active {
-    background-color: #1542a6;
+  background-color: #9d2af6;
   }
-   button.tablinks.active {
-   /* not currently working*/
-    background-color: #1542a6;
-  }
-
 }
+.tab button.active,
+  button.tablinks.active {
+        background-image: linear-gradient(130deg, rgb(5, 70, 173) 0%, rgb(138, 43, 226) 100%);
+            background-color: rgb(5, 70, 173) !important;
+            overflow: visible;
+            transform-style: preserve-3d;
+            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.01);
+            transition: background-color 0.1s ease-in-out;
+  }
+  .tab button {
+    background-color: #000 !important;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+background: #5643b4
